--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,12 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.ehcache:ehcache:3.10.0'
+	implementation 'javax.cache:cache-api:1.1.1'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
+	implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
